testes usabilidade + fix last things